--- a/index.html
+++ b/index.html
@@ -15,32 +15,61 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
-<menu>
+<section id="navbar" >
 	<div class="container">
 		<div class="row">
+			<div class="col-md-  col-xs-">
 			
-		</div>
-	</div>
-</menu>
-<header>
-	<div class="container">
-		<div class="row">
-			
-		</div>
-	</div>
-</header>
-<section id="" >
-	<div class="container">
-		<div class="row">
-			
+			</div>
 		</div>
 	</div>
 </section>
+
+<section id="hero" >
+	<div class="container">
+		<div class="row">
+			<div class="col-md-  col-xs-">
+			
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="informacion" >
+	<div class="container">
+		<div class="row">
+			<div class="col-md-  col-xs-">
+			
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="conduce" >
+	<div class="container">
+		<div class="row">
+			<div class="col-md-  col-xs-">
+			
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="tarifas" >
+	<div class="container">
+		<div class="row">
+			<div class="col-md-  col-xs-">
+			
+			</div>
+		</div>
+	</div>
+</section>
+
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-12">
-				<small>Desarrollado por Caterina Da Silva</small>
+			<div class="col-md-  col-xs-">
+			
 			</div>
 		</div>
 	</div>
