--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es_CL">
 <head>
-	<title>TITLE</title>
+	<title>LAB-CAR</title>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,45 +11,65 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Fontawesome -->
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
+	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
+	<!--<link rel="stylesheet" type="text/css" href="asset/css/media.css"> -->
 </head>
 <body>
 <section id="navbar" >
 	<div class="container">
 		<div class="row">
 			<div class="col-md-  col-xs-">
-			
-			</div>
+				<div class="contenedor">
+					<div class="logonav">imagen logo poner</div>
+					<div class="nav">
+						<a class="nav">Viaja</a>
+						<a class="nav">Conduce</a>
+						<a class="nav">Inicia Sesión</a>
+					</div>
+				</div>
 		</div>
 	</div>
 </section>
 
 <section id="hero" >
-	<div class="container">
-		<div class="row">
-			<div class="col-md-  col-xs-">
-			
+	<div class="row">
+		<div class="col-md-4 col-md-offset-8 col-xs- hero-dos">
+			<h2>Disfruta del viaje<br>Eres dueño de tu tiempo</h2>
+			<h5>Viaja con  <img src="asset/img/logo-blanco.png"></h5>
+			<p>REGISTRATE</p>
+			<div class="row">
+				<div class="col-md-4 col-xs- ">
+					<input class="in-uno"> 
+					<p>o bien</p> 
+					<input class="in-dos">
+				</div>
 			</div>
+			<button class="boton-hero"><strong>Conviertete en un conductor</strong> </button>
 		</div>
 	</div>
 </section>
 
 <section id="informacion" >
 	<div class="container">
-		<div class="row">
-			<div class="col-md-  col-xs-">
-			
+		<div class="row info">
+			<div class="col-md-4  col-xs-">
+				<img class="imagen-celular" src="asset/img/celular.png">
+			</div>
+			<div class="col-md-4  col-xs- texto-info">
+				<h2>Descarga nuestra app</h2>
+				<p><br>La versión actualizada de Labcar está llena de nuevas funciones para lleagr a donde quieras aún mas fácil y rápido. <br><br> Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir</p>
 			</div>
 		</div>
 	</div>
 </section>
 
 <section id="conduce" >
-	<div class="container">
-		<div class="row">
-			<div class="col-md-  col-xs-">
-			
+	<div class="row">
+		<div class="col-md-  col-xs-12">
+			<div class="col-md-4 col-md-offset-8 col-xs-12 conduce-dos">
+				<h2>Conduce cuando quieras</h2>
+				<p>LabCar es una opcíón flexible para alcanzar tus metas financieras.</p>
+				<button class="boton-conduce">Conviértete en conductor</button>
 			</div>
 		</div>
 	</div>
