--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 	<!--<link rel="stylesheet" type="text/css" href="asset/css/media.css"> -->
 </head>
 <body>
-<section id="navbar" >
+<section>
 	<div class="container">
-		<div class="row">
-			<div class="col-md-  col-xs-">
-				<div class="contenedor">
-					<div class="logonav">imagen logo poner</div>
-					<div class="nav">
-						<a class="nav">Viaja</a>
-						<a class="nav">Conduce</a>
-						<a class="nav">Inicia Sesión</a>
-					</div>
-				</div>
+		<div class="row navbar">
+			<div class="col-md-4 col-xs-">	
+					<img src="asset/img/logo.png">
+			</div>	
+			<div class="col-md-4 col-md-offset-4 col-xs-">
+				<a class="a-uno" href="#viaja">Viaja</a>
+				<a class="a-uno" href="#conduce">Conduce</a>
+				<a class="a-uno" href="#inicia-sesion">Inicia sesión</a>
+			</div>		
 		</div>
 	</div>
 </section>
@@ -50,16 +49,14 @@
 </section>
 
 <section id="informacion" >
-	<div class="container">
-		<div class="row info">
-			<div class="col-md-4  col-xs-">
+	<div class="row info">
+			<div class="col-md-4 col-md-offset-1 col-xs-">
 				<img class="imagen-celular" src="asset/img/celular.png">
 			</div>
 			<div class="col-md-4  col-xs- texto-info">
 				<h2>Descarga nuestra app</h2>
 				<p><br>La versión actualizada de Labcar está llena de nuevas funciones para lleagr a donde quieras aún mas fácil y rápido. <br><br> Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir</p>
 			</div>
-		</div>
 	</div>
 </section>
 
@@ -78,8 +75,8 @@
 <section id="tarifas" >
 	<div class="container">
 		<div class="row">
-			<div class="col-md-  col-xs-">
-			
+			<div class="col-md-  col-xs-" id="map">
+				<!-- aqui iria el mapa-->
 			</div>
 		</div>
 	</div>
@@ -94,6 +91,9 @@
 		</div>
 	</div>
 </footer>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbLQ_VKj5tsVzyxAArHl0f_fJPNxtZp6g&callback=initMap&libraries=places"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="asset/app.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Bootstrap Latest compiled and minified JavaScript -->
