--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 					<img src="asset/img/logo.png">
 			</div>	
 			<div class="col-md-4 col-md-offset-4 col-xs-">
-				<a class="a-uno" href="#viaja">Viaja</a>
-				<a class="a-uno" href="#conduce">Conduce</a>
-				<a class="a-uno" href="#inicia-sesion">Inicia sesión</a>
+				<a class="a-uno" href="#viaja"><strong>Viaja</strong></a>
+				<a class="a-uno" href="#conduce"><strong>Conduce</strong></a>
+				<a class="a-uno" href="#inicia-sesion"><strong>Inicia sesión</strong></a>
 			</div>		
 		</div>
 	</div>
@@ -32,31 +32,31 @@
 
 <section id="hero" >
 	<div class="row">
-		<div class="col-md-4 col-md-offset-8 col-xs- hero-dos">
-			<h2>Disfruta del viaje<br>Eres dueño de tu tiempo</h2>
-			<h5>Viaja con  <img src="asset/img/logo-blanco.png"></h5>
-			<p>REGISTRATE</p>
-			<div class="row">
-				<div class="col-md-4 col-xs- ">
-					<input class="in-uno"> 
-					<p>o bien</p> 
-					<input class="in-dos">
-				</div>
-			</div>
+		<div class="col-md-5 col-md-offset-7 col-xs- hero-dos">
+			<h1>Disfruta del viaje<br>Eres dueño de tu tiempo</h1>
+			<h5 class="viaja"><br>Viaja con  
+			<img src="asset/img/logo-blanco.png"></h5>
+			<p><br>REGISTRATE</p>
+			<input class="in-uno" <p>       
+			O bien  
+			<input class="in-dos"><br> 
+
 			<button class="boton-hero"><strong>Conviertete en un conductor</strong> </button>
 		</div>
 	</div>
 </section>
 
 <section id="informacion" >
-	<div class="row info">
-			<div class="col-md-4 col-md-offset-1 col-xs-">
+	<div class="row">
+		<div class="col-md-10 col-xs- info">
+			<div class="col-md-6 col-xs-">
 				<img class="imagen-celular" src="asset/img/celular.png">
 			</div>
-			<div class="col-md-4  col-xs- texto-info">
+			<div class="col-md-6  col-xs- texto-info">
 				<h2>Descarga nuestra app</h2>
-				<p><br>La versión actualizada de Labcar está llena de nuevas funciones para lleagr a donde quieras aún mas fácil y rápido. <br><br> Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir</p>
+				<p><br>La versión actualizada de Labcar está llena de nuevas funciones para llegar a donde quieras aún mas fácil y rápido. <br><br> Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir</p>
 			</div>
+		</div>
 	</div>
 </section>
 
@@ -75,7 +75,22 @@
 <section id="tarifas" >
 	<div class="container">
 		<div class="row">
-			<div class="col-md-  col-xs-" id="map">
+			<div class="col-md-6  col-xs- tari">
+				<h2>Tarifas</h2>
+				<p class="consulta">Consulta las tarifas LabCar aquí</p>
+				<div class="col-md-12  col-xs- ">
+					<img src="asset/img/circulo.png"> 
+					<input class="input-tarifas" value="Ingrese su punto de partida">
+				</div>
+				<div class="col-md-12  col-xs-">
+					<img src="asset/img/flecha.png">
+					<input class="input-tarifas" value="Ingrese su destino">
+				</div>
+				<div class="col-md-8 col-md-offset-2 col-xs-">
+					<button class="boton-ruta"><strong>¡TRAZAR RUTA!</strong></button>
+				</div>
+			</div>
+			<div class="col-md-6  col-xs-" id="map">
 				<!-- aqui iria el mapa-->
 			</div>
 		</div>
@@ -85,8 +100,45 @@
 <footer>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-  col-xs-">
-			
+			<div class="col-md-2 col-xs-">
+				<img class="logo-blanco" src="asset/img/logo-blanco.png">
+			</div>
+			<div class="col-md-12  col-xs-">
+				<p class="linea-uno"></p>
+			</div>
+			<div class="col-md-3 col-md-offset-3 col-xs-">
+				<ul>
+					<li><a href="viaja">Viaja</a></li>
+					<li><a href="conduce">Conduce</a></li>
+					<li><a href="cuidades">Ciudades</a></li>
+					<li><a href="tarifas">Tarifas</a></li>
+					<li><a href="entregas">Entregas</a></li>
+					<li><a href="como funciona">Cómo funciona</a></li>
+					<li><a href="paises">Países</a></li>
+					<li><a href="seguridad">Seguridad</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3 col-xs-">
+				<ul>
+					<li><a href="oportunidades">Oportunidades</a></li>
+					<li><a href="nuestra historia">Nuestra historia</a></li>
+					<li><a href="api">API de LabCar</a></li>
+					<li><a href="eventos">Eventos</a></li>
+					<li><a href="desarrolladores">Desarrolladores</a></li>
+					<li><a href="servicios">Servicios</a></li>
+					<li><a href="laboratoria">Laboratoria</a></li>
+					<li><a href="coders">Coders</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3  col-xs- icono-google">
+				<img class="iconouno" src="asset/img/google-play.png">
+				<img class="iconouno"src="asset/img/app-store.png">
+			</div>
+			<div class="col-md-12  col-xs-">
+				<p class="linea-uno"></p>
+			</div>
+			<div class="col-md-6 col-md-offset-5  col-xs-">
+				<p>© 2017 LabCar technologies Inc.</p>
 			</div>
 		</div>
 	</div>
