--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<!-- Fontawesome -->
 	<script src="https://use.fontawesome.com/d2c9b2c5c1.js"></script>
 	<link rel="stylesheet" type="text/css" href="asset/css/main.css">
-	<!--<link rel="stylesheet" type="text/css" href="asset/css/media.css"> -->
+	<link rel="stylesheet" type="text/css" href="asset/css/media.css">
 </head>
 <body>
 <section>
@@ -32,7 +32,7 @@
 
 <section id="hero" >
 	<div class="row">
-		<div class="col-md-5 col-md-offset-7 col-xs- hero-dos">
+		<div class="col-md-5 col-md-offset-7 col-xs-8 col-xs-offset-4 hero-dos">
 			<h1>Disfruta del viaje<br>Eres dueño de tu tiempo</h1>
 			<h5 class="viaja"><br>Viaja con  
 			<img src="asset/img/logo-blanco.png"></h5>
@@ -40,7 +40,6 @@
 			<input class="in-uno" <p>       
 			O bien  
 			<input class="in-dos"><br> 
-
 			<button class="boton-hero"><strong>Conviertete en un conductor</strong> </button>
 		</div>
 	</div>
@@ -90,8 +89,10 @@
 					<button class="boton-ruta"><strong>¡TRAZAR RUTA!</strong></button>
 				</div>
 			</div>
-			<div class="col-md-6  col-xs-" id="map">
-				<!-- aqui iria el mapa-->
+			<div class="col-md-6  col-xs- mapa">
+				<div id="map">
+					<!-- aqui iria el mapa-->
+				</div>
 			</div>
 		</div>
 	</div>
@@ -143,13 +144,14 @@
 		</div>
 	</div>
 </footer>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbLQ_VKj5tsVzyxAArHl0f_fJPNxtZp6g&callback=initMap&libraries=places"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDh6JO3niT83l_J2fXlt-wX4xlgNBDgAYQ&callback=initMap"
+  type="text/javascript"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="asset/app.js"></script>
+	<script src="asset/main.js"></script>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Bootstrap Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="assets/js/script.js"></script>
+<script type="text/javascript" src="asset/js/main.js"></script>
 </body>
 </html>
