--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
 <section id="conduce" >
 	<div class="row">
-		<div class="col-md-  col-xs-12">
-			<div class="col-md-4 col-md-offset-8 col-xs-12 conduce-dos">
+		<div class="col-md-4 col-md-offset-8 col-xs-12">
+			<div class=" conduce-dos">
 				<h2>Conduce cuando quieras</h2>
 				<p>LabCar es una opcíón flexible para alcanzar tus metas financieras.</p>
 				<button class="boton-conduce">Conviértete en conductor</button>
@@ -85,11 +85,11 @@
 					<img src="asset/img/flecha.png">
 					<input class="input-tarifas" value="Ingrese su destino">
 				</div>
-				<div class="col-md-8 col-md-offset-2 col-xs-">
+				<div class="col-md-8 col-md-offset-2 col-xs-12 col-xs-offset-2">
 					<button class="boton-ruta"><strong>¡TRAZAR RUTA!</strong></button>
 				</div>
 			</div>
-			<div class="col-md-6  col-xs- mapa">
+			<div class="col-md-6 hidden-xs mapa">
 				<div id="map">
 					<!-- aqui iria el mapa-->
 				</div>
@@ -107,7 +107,7 @@
 			<div class="col-md-12  col-xs-">
 				<p class="linea-uno"></p>
 			</div>
-			<div class="col-md-3 col-md-offset-3 col-xs-">
+			<div class="col-md-3 col-md-offset-3 col-xs-6">
 				<ul>
 					<li><a href="viaja">Viaja</a></li>
 					<li><a href="conduce">Conduce</a></li>
@@ -119,7 +119,7 @@
 					<li><a href="seguridad">Seguridad</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3 col-xs-">
+			<div class="col-md-3 hidden-xs">
 				<ul>
 					<li><a href="oportunidades">Oportunidades</a></li>
 					<li><a href="nuestra historia">Nuestra historia</a></li>
@@ -131,14 +131,14 @@
 					<li><a href="coders">Coders</a></li>
 				</ul>
 			</div>
-			<div class="col-md-3  col-xs- icono-google">
+			<div class="col-md-3  col-xs-6 icono-google">
 				<img class="iconouno" src="asset/img/google-play.png">
 				<img class="iconouno"src="asset/img/app-store.png">
 			</div>
-			<div class="col-md-12  col-xs-">
+			<div class="col-md-12  col-xs-12">
 				<p class="linea-uno"></p>
 			</div>
-			<div class="col-md-6 col-md-offset-5  col-xs-">
+			<div class="col-md-6 col-md-offset-5  col-xs-7 col-xs-offset-3">
 				<p>© 2017 LabCar technologies Inc.</p>
 			</div>
 		</div>
