--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<div class="col-md-4 col-xs-">	
 					<img src="asset/img/logo.png">
 			</div>	
-			<div class="col-md-4 col-md-offset-4 col-xs-">
+			<div class="col-md-4 col-md-offset-4 hidden-xs">
 				<a class="a-uno" href="#viaja"><strong>Viaja</strong></a>
 				<a class="a-uno" href="#conduce"><strong>Conduce</strong></a>
 				<a class="a-uno" href="#inicia-sesion"><strong>Inicia sesión</strong></a>
@@ -32,7 +32,7 @@
 
 <section id="hero" >
 	<div class="row">
-		<div class="col-md-5 col-md-offset-7 col-xs-8 col-xs-offset-4 hero-dos">
+		<div class="col-lg-5 col-lg-offset-7 col-md-5 col-md-offset-7 hidden-sm hidden-xs hero-dos">
 			<h1>Disfruta del viaje<br>Eres dueño de tu tiempo</h1>
 			<h5 class="viaja"><br>Viaja con  
 			<img src="asset/img/logo-blanco.png"></h5>
@@ -41,6 +41,11 @@
 			O bien  
 			<input class="in-dos"><br> 
 			<button class="boton-hero"><strong>Conviertete en un conductor</strong> </button>
+		</div>
+		<div class="hidden-lg hidden-md col-sm-8 col-sm-offset-4 col-xs-8 col-xs-offset-4 hero-dos">
+			<h1>Comienza a viajar con</h1>	
+			<img src="asset/img/logo-blanco.png">
+			<button class="boton-hero"><strong>Descarga el app</strong></button>
 		</div>
 	</div>
 </section>
