ultimos arreglines antes de entregar

--- a/index.html
+++ b/index.html
@@ -53,12 +53,15 @@
 <section id="informacion" >
 	<div class="row">
 		<div class="col-md-10 col-xs- info">
-			<div class="col-md-6 col-xs-">
+			<div class="col-md-6 col-xs-12">
 				<img class="imagen-celular" src="asset/img/celular.png">
 			</div>
-			<div class="col-md-6  col-xs- texto-info">
+			<div class="col-md-6  hidden-xs texto-info">
 				<h2>Descarga nuestra app</h2>
 				<p><br>La versión actualizada de Labcar está llena de nuevas funciones para llegar a donde quieras aún mas fácil y rápido. <br><br> Con solo tocar un botón, un auto llega justo a tu ubicación. Súbete y no te preocupes: tu conductor sabe exactamente a dónde ir</p>
+			</div>
+			<div class="hidden-lg hidden-md  col-ms-10 col-xs-10 texto-infoxs">
+				<h3>Llega a tu destino aún más rápido</h3>
 			</div>
 		</div>
 	</div>
@@ -143,7 +146,7 @@
 			<div class="col-md-12  col-xs-12">
 				<p class="linea-uno"></p>
 			</div>
-			<div class="col-md-6 col-md-offset-5  col-xs-7 col-xs-offset-3">
+			<div class="col-md-6 col-md-offset-5  col-xs-12 col-xs-offset-1">
 				<p>© 2017 LabCar technologies Inc.</p>
 			</div>
 		</div>
